# grading

./: build.sh  grading-utils.cabal  grading.cabal  stack.yaml  test-submission.cabal
app/: tar-folder.hs  test-submission.hs
ghc-stack-hlint/: Dockerfile  stack.yaml
grading/: grading.cabal
grading-utils/: grading-utils.cabal
grading-utils/src/Grading/Utils/: Result.hs  Test.hs
grading/app/: grading-add-task.hs  grading-add-user.hs  grading-get-submission.hs  grading-get-submissions.hs  grading-get-task.hs  grading-post-submission.hs  grading-server.hs  grading-tasks.hs  grading-upload.hs  grading-users.hs  tar-folder.hs  test-submission.hs  upload-submission.hs
grading/src/Grading/: API.hs  Client.hs  Server.hs  Submission.hs  Types.hs
grading/src/Grading/Server/: GradingM.hs  Handlers.hs
grading/src/Grading/Server/Monad/: Class.hs  GradingM.hs
grading/src/Grading/Utils/: Archive.hs  Auth.hs  CheckResult.hs  Crypto.hs  Docker.hs  Report.hs  Submit.hs  Tar.hs  ToResult.hs
src/Grading/Utils/: Docker.hs  Result.hs  Submit.hs  Tar.hs  TestUtils.hs
src/TestSubmission/: Docker.hs  Result.hs  Submit.hs  Utils.hs
