Name:          grading
Version:       0.0.0.0
Cabal-Version: >= 2.0
Build-Type:    Simple
Copyright:     © 2019 Lars Bruenjes
Author:        Lars Bruenjes

library
    exposed-modules:
          Grading.Utils.Docker
        , Grading.Utils.Result
        , Grading.Utils.Submit
        , Grading.Utils.Tar
        , Grading.Utils.TestUtils
    build-depends:
          base >= 4.12 && < 5
        , bytestring
        , containers
        , directory
        , filepath
        , QuickCheck
        , tar
        , typed-process
        , unliftio
        , zlib
    hs-source-dirs: src
    default-language: Haskell2010
    ghc-options: -Wall

executable tar-folder
  hs-source-dirs:      app
  main-is:             tar-folder.hs
  build-depends:       base >= 4.12 && < 5
                     , bytestring
                     , grading
                     , optparse-generic
  ghc-options:         -Wall -O3
  default-language:    Haskell2010

executable test-submission
  hs-source-dirs:      app
  main-is:             test-submission.hs
  build-depends:       base >= 4.12 && < 5
                     , grading
                     , optparse-generic
  ghc-options:         -Wall -threaded -O3
  default-language:    Haskell2010
