Name:          test-submission
Version:       0.0.0.0
Cabal-Version: >= 2.0
Build-Type:    Simple
Copyright:     © 2019 Lars Bruenjes
Author:        Lars Bruenjes

library
    exposed-modules:
          TestSubmission.Docker
        , TestSubmission.Result
        , TestSubmission.Submit
        , TestSubmission.Utils
    build-depends:
          base >= 4.12 && < 5
        , bytestring
        , containers
        , directory
        , filepath
        , QuickCheck
        , typed-process
        , unliftio
    hs-source-dirs: src
    default-language: Haskell2010
    ghc-options: -Wall

executable test-submission
  hs-source-dirs:      app
  main-is:             test-submission.hs
  build-depends:       base >= 4.12 && < 5
                     , test-submission
  ghc-options:         -Wall -threaded -O3
  default-language:    Haskell2010
