Name:          grading
Version:       0.0.0.0
Cabal-Version: >= 2.0
Build-Type:    Simple
Copyright:     © 2019 Lars Bruenjes
Author:        Lars Bruenjes

library
    exposed-modules:
          Grading.API
        , Grading.Utils.Docker
        , Grading.Utils.Submit
        , Grading.Utils.Tar
        , Grading.Utils.ToResult
    build-depends:
          base >= 4.12 && < 5
        , bytestring
        , containers
        , directory
        , filepath
        , grading-utils
        , http-client
        , mtl
        , pipes
        , pipes-bytestring
        , QuickCheck
        , servant-client
        , servant-server
        , sqlite-simple
        , tar
        , typed-process
        , unliftio
        , utf8-string
        , warp
        , zenc
        , zlib
    hs-source-dirs: src
    default-language: Haskell2010
    ghc-options: -Wall

executable tar-folder
  hs-source-dirs:      app
  main-is:             tar-folder.hs
  build-depends:       base >= 4.12 && < 5
                     , bytestring
                     , grading
                     , optparse-generic
  ghc-options:         -Wall -O3
  default-language:    Haskell2010

executable test-submission
  hs-source-dirs:      app
  main-is:             test-submission.hs
  build-depends:       base >= 4.12 && < 5
                     , grading
                     , optparse-generic
  ghc-options:         -Wall -threaded -O3
  default-language:    Haskell2010
