Name:          grading
Version:       0.0.0.0
Cabal-Version: >= 2.0
Build-Type:    Simple
Copyright:     © 2019 Lars Bruenjes
Author:        Lars Bruenjes

library
    exposed-modules:
          Grading.API
        , Grading.Client
        , Grading.Utils.Docker
        , Grading.Server
        , Grading.Server.GradingM
        , Grading.Server.Handlers
        , Grading.Types
        , Grading.Utils.Submit
        , Grading.Utils.Tar
        , Grading.Utils.ToResult
    build-depends:
          base >= 4.12 && < 5
        , aeson
        , bytestring
        , containers
        , directory
        , filepath
        , grading-utils
        , http-client
        , mtl
        , optparse-generic
        , pipes
        , pipes-bytestring
        , QuickCheck
        , servant-client
        , servant-server
        , sqlite-simple
        , tar
        , typed-process
        , unliftio
        , utf8-string
        , warp
        , zlib
    hs-source-dirs: src
    default-language: Haskell2010
    ghc-options: -Wall

executable grading-add-user
  hs-source-dirs:      app
  main-is:             grading-add-user.hs
  build-depends:       base >= 4.12 && < 5
                     , grading
                     , optparse-generic
  ghc-options:         -Wall -O3
  default-language:    Haskell2010

executable grading-users
  hs-source-dirs:      app
  main-is:             grading-users.hs
  build-depends:       base >= 4.12 && < 5
                     , grading
                     , optparse-generic
  ghc-options:         -Wall -O3
  default-language:    Haskell2010

executable grading-server
  hs-source-dirs:      app
  main-is:             grading-server.hs
  build-depends:       base >= 4.12 && < 5
                     , grading
                     , optparse-generic
  ghc-options:         -Wall -threaded -O3
  default-language:    Haskell2010

executable tar-folder
  hs-source-dirs:      app
  main-is:             tar-folder.hs
  build-depends:       base >= 4.12 && < 5
                     , bytestring
                     , grading
                     , optparse-generic
  ghc-options:         -Wall -O3
  default-language:    Haskell2010

executable test-submission
  hs-source-dirs:      app
  main-is:             test-submission.hs
  build-depends:       base >= 4.12 && < 5
                     , grading
                     , optparse-generic
  ghc-options:         -Wall -threaded -O3
  default-language:    Haskell2010

executable upload-submission
  hs-source-dirs:      app
  main-is:             upload-submission.hs
  build-depends:       base >= 4.12 && < 5
                     , grading
                     , optparse-generic
  ghc-options:         -Wall -O3
  default-language:    Haskell2010
